<resources>
    <string name="app_name">Animator</string>
    <string name="alpha">FADE OUT</string>
    <string name="rotate">ROTATE</string>
    <string name="scale">SCALE</string>
    <string name="translate">TRANSLATE</string>
    <string name="set_from_xml">SET FROM XML</string>
    <string name="imgage_decription">A black leaf illustration</string>
    <string name="fromCode">SET FROM CODE</string>
    <string name="VPA">VIEW PROPERTY ANIMATOR</string>
    <string name="pvh">PROPERTY VALUES HOLDER</string>
    <string name="go_to_animate_drawables">Go to Animate Drawables</string>
    <string name="start_animation">START ANIMATION</string>
    <string name="animated_vector_drawable">Animated VEctor Drawable</string>
    <string name="tick_to_check">A tick icom</string>
    <string name="transitions">Transitions</string>
    <string name="hello_world">Hello World</string>
    <string name="hello_world_desc">Hello World is the first program every programmer ever gets to write.
        It typically involves writing code to print the words hello world on the screen/terminal.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">This description is that of the author and should not be viewed to be of any kind of expert. The author denies responsibility for any harm done</string>
    <string name="keyframe_animation">Keyframe Animation</string>
    <string name="roger">Roger from American Dad</string>
    <string name="roger_name">Roger</string>
    <string name="cartoon_character">cartoon character</string>
    <string name="roger_desc">Roger is a cartoon character in the American dad cartoon comedy series</string>
</resources>
